<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_gravity="center"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".dataActivity">
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="150dp">

        <TextView
            android:id="@+id/CurrentDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Date : 00-00-0000"
            android:layout_marginTop="30dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="50dp"
            android:textSize="18sp"
            android:gravity="center"
            android:fontFamily="@font/amaranth"
            android:textColor="@color/black" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/amaranth"
            android:gravity="center"
            android:text="@string/select_the_item"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="50dp"/>

        <LinearLayout
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="45dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="83dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/amaranth"
                android:gravity="center"
                android:text="@string/notex"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/notes"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth"
                android:hint="@string/name_quantity"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="45dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="83dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/amaranth"
                android:gravity="center"
                android:text="@string/pricex"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/itemPrice"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/amaranth"
                android:hint="100/500/1000"
                android:inputType="number"
                android:textColor="@color/black" />

        </LinearLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/coda"
            android:text="@string/xsave"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>